--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,15 +10,15 @@
 
 // stylelint-disable
 $white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #E0E0E0 !default;
-$gray-300: #dee2e6 !default;
+$gray-100: #FAFAFA !default;
+$gray-200: #EDEDED !default;
+$gray-300: #E0E0E0 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #1E1F21 !default;
+$gray-600: #757575 !default;
+$gray-700: #404040 !default;
+$gray-800: #1E1F21 !default;
+$gray-900: #1D1F20 !default;
 $black:    #000 !default;
 
 $grays: () !default;
@@ -38,12 +38,14 @@ $blue:    #01959F !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
+$red:     #E11428 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #43936C !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$light-blue:    #F7FEFF !default;
+$light-blue-2:    #4DB5BC !default;
 
 $colors: () !default;
 $colors: map-merge((
@@ -70,6 +72,8 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
+$light-primary-fill:    $light-blue !default;
+$light-primary-outline: $light-blue-2 !default;
 
 $theme-colors: () !default;
 $theme-colors: map-merge((
