--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -240,6 +240,8 @@ $transition-collapse:         height .35s ease !default;
 // Fonts
 //
 // Font, line-height, and color for body text, headings, and more.
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?&family=Nunito+Sans:wght@200&display=swap');
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:      "Nunito Sans", sans-serif !default;
