--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -69,35 +69,91 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    &-compact {
-        height: 28px;
-        border-radius: 8px;
-        font-size: 12px;
-        font-weight: 700;
-        line-height: 20px;
-        padding: 4px 16px;
-    }
-
-    &-plain {
-        background-color: transparent;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 20px;
-        padding: 0;
-        color: $gray-900;
-
-        img {
-            height: 16.7px;
-            color: #333333;
-        }
-    }
+    height: 32px;
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    padding: 4px 16px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.12);
 
     img {
         padding-right: 6.5px;
         font-size: 12px;
         font-weight: 400;
         line-height: 20px;
+    }
+    
+    &-compact {
+        height: 28px;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    &-outline {
+        background-color: $white;
+        border: 1px solid $gray-300;
+        color: $gray-900;
+    }
+
+    &-plain {
+        background-color: transparent;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 20px;
+        padding: 0;
+        color: $gray-900;
+        box-shadow: none;
+
+        img {
+            height: 16.7px;
+            color: #333333;
+        }
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+    
+    &-icon {
+        box-shadow: none;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+}
+
+.badge {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    padding: 2px 8px;
+    border-radius: 4px;
+
+    &.primary-outline {
+        color: $primary;
+        background-color: $light-primary-fill;
+        border: 1px solid $light-primary-outline;
+    }
+
+    &.warning-outline {
+        color: $warning;
+        background-color: $light-warning-fill;
+        border: 1px solid $light-warning-outline;
+    }
+
+    &.danger-outline {
+        color: $danger;
+        background-color: $light-danger-fill;
+        border: 1px solid $light-danger-outline;
+    }
+
+    &.success-outline {
+        color: $success;
+        background-color: $light-success-fill;
+        border: 1px solid $light-success-outline;
     }
 }
 
@@ -164,38 +220,6 @@ header {
     }
 }
 
-.badge {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 20px;
-    padding: 2px 8px;
-    border-radius: 4px;
-
-    &.primary-outline {
-        color: $primary;
-        background-color: $light-primary-fill;
-        border: 1px solid $light-primary-outline;
-    }
-
-    &.warning-outline {
-        color: $warning;
-        background-color: $light-warning-fill;
-        border: 1px solid $light-warning-outline;
-    }
-
-    &.danger-outline {
-        color: $danger;
-        background-color: $light-danger-fill;
-        border: 1px solid $light-danger-outline;
-    }
-
-    &.success-outline {
-        color: $success;
-        background-color: $light-success-fill;
-        border: 1px solid $light-success-outline;
-    }
-}
-
 .detail-wrapper {
     display: flex;
     flex-direction: row;
@@ -243,10 +267,60 @@ header {
     }
 
     span {
+        font-family: 'Inter', sans-serif;
         font-weight: 400;
         font-size: 12px;
         line-height: 16px;
         margin-left: 14px;
         color: $gray-600;
+    }
+}
+
+.modal-dialog .modal-content {
+    background-color: $white;
+    width: 420px;
+    border: 0px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+    .modal-header {
+        padding: 24px;
+        display: flex;
+        align-items: center;
+        border: 0px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+
+        .modal-title {
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 28px;
+            color: $gray-900;
+        }
+
+        .modal-close {
+            width: 24px;
+            height: 24px;
+
+            img {
+                width: 24px;
+                height: 24px;
+                padding: 0;
+                color: $gray-700;
+            }
+        }
+    }
+
+    .modal-body {
+        padding: 0px 24px;
+    }
+
+    .modal-footer {
+        padding: 24px;
+        border: 0px;
+
+        .btn {
+
+        }
     }
 }
