Create Setting Dialog Element
- added setting dialog styling
- added more icon

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,7 +14,7 @@ $gray-100: #FAFAFA !default;
 $gray-200: #EDEDED !default;
 $gray-300: #E0E0E0 !default;
 $gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
+$gray-500: #333333 !default;
 $gray-600: #757575 !default;
 $gray-700: #404040 !default;
 $gray-800: #1E1F21 !default;
