--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -227,7 +227,7 @@ header {
     height: 24px;
     width: 100%;
 
-    .btn {
+    button {
         height: 24px;
         width: 24px;
         padding: 0;
@@ -345,5 +345,82 @@ form {
         font-size: 12px;
         line-height: 20px;
         margin-bottom: 16px;
+    }
+}
+
+.dropend {
+    box-shadow: none;
+    margin-left: auto;
+
+    .dropdown-toggle.btn-secondary {
+        border: none;
+        box-shadow: none;
+
+        &:after {
+            content: none;
+         }
+
+        &:focus,&:active,&:hover,&:focus-visible,&:focus-within {
+            border: none;
+            box-shadow: none;
+            background-color: $gray-200;
+        }
+
+        img {
+            width: 24px;
+            height: 24px;
+            padding-right: 0;
+        }
+    }
+
+    &.show {
+        .dropdown-toggle.btn-secondary {
+            border: none;
+            box-shadow: none;
+            background-color: $gray-200;
+        }
+    }
+
+    .dropdown-menu {
+        min-width: 320px;
+        min-height: 160px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08);
+        border: none;
+        border-radius: 8px;
+
+        img {
+            width: 24px;
+            height: 24px;
+            margin-right: 16px;
+            fill: $gray-500;
+        }
+
+        .dropdown-item {
+            display: flex;
+            align-items: center;
+            height: 36px;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 24px;
+            color: $gray-500;
+    
+            &:hover, &:active {
+                background-color: $white;
+                color: $primary;
+
+                img {
+                    filter: invert(37%) sepia(71%) saturate(3721%) hue-rotate(161deg) brightness(95%) contrast(101%);
+                }
+
+            &.danger:hover, &.danger:active {
+                background-color: $white;
+                color: $danger;
+
+                img {
+                    filter: invert(17%) sepia(72%) saturate(4493%) hue-rotate(345deg) brightness(91%) contrast(100%);
+                }
+            }
+            }
+        }
     }
 }
