--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -348,7 +348,7 @@ form {
     }
 }
 
-.dropend {
+.dropdown {
     box-shadow: none;
     margin-left: auto;
 
@@ -383,7 +383,6 @@ form {
 
     .dropdown-menu {
         min-width: 320px;
-        min-height: 160px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08);
         border: none;
         border-radius: 8px;
